--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://cube9007.github.io/CandleMusic",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.83.4"
