--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.0-rc.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
